fix(readability): Set a white background behind TOC

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,6 +2,7 @@
  * Table Of Content
  */
 #toc {
+  background: #fff;
   position: sticky;
   top: 1.25rem;
 }
